--- a/collections/src/main/webapp/styles/style.css
+++ b/collections/src/main/webapp/styles/style.css
@@ -31,6 +31,22 @@ textarea {
      text-align: right;
 }
 
+/******************************************************************************************/
+/*************************************** PERCENT*******************************************/
+/******************************************************************************************/
+
+.percent25 {
+	width: 25%;
+}
+
+.percent50 {
+	width: 50%;
+}
+
+.percent75 {
+	width: 75%;
+}
+
 
 /******************************************************************************************/
 /*************************************** LAYOUT *******************************************/
