--- a/collections/.settings/org.eclipse.wst.common.component
+++ b/collections/.settings/org.eclipse.wst.common.component
@@ -6,5 +6,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="context-root" value="collections"/>
         <property name="java-output-path" value="/collections/target/classes"/>
+        <property name="component.exclusion.patterns"/>
     </wb-module>
 </project-modules>
