--- a/collections/src/main/webapp/layouts/layoutLogin.xhtml
+++ b/collections/src/main/webapp/layouts/layoutLogin.xhtml
@@ -20,20 +20,12 @@
 
 	<p:layout fullPage="true">
 
-	    <p:layoutUnit position="north" size="115" resizable="false" closable="false" collapsible="false" >
-			<ui:include src="header.xhtml"/>
+	    <p:layoutUnit position="north" size="100" resizable="false" closable="false" collapsible="false" >
+	    	<ui:include src="header.xhtml"/>
 	    </p:layoutUnit>
 
-	    <p:layoutUnit position="south" size="100" resizable="true" closable="true" collapsible="true">
+	    <p:layoutUnit position="south" size="100" resizable="true" closable="true" collapsible="true" style="text-align:center">
 			<ui:include src="technologies.xhtml"/>
-	    </p:layoutUnit>
-
-	    <p:layoutUnit position="west" size="250" header="#{msg.menu_options}" resizable="true" closable="false" collapsible="true">
-	      	 <ui:include src="menu.xhtml"/>
-	    </p:layoutUnit>
-
-	    <p:layoutUnit position="east" size="200" header="Right" resizable="true" closable="true" collapsible="true" effect="drop">
-	        <h:outputText value="Right unit content." />
 	    </p:layoutUnit>
 
 	    <p:layoutUnit position="center">
